--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>bluecondasite</title>
+    <title>Blueconda Editor: The Beginner-Friendly Python Code Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
   </head>
